2006-02-22  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclBasic.c:	Corrected a few bugs in how [namespace unknown]
	* tests/namespace.test:	interacts with TCL_EVAL_* flags. [Patch 958222]

2006-02-17  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclIORChan.c:	Revised error message generation and handling
	* tests/ioCmd.test:	of exceptional return codes in the channel
	reflection layer.  [Bug 1372348].

2006-02-16  Don Porter  <dgp@users.sourceforge.net>

        * generic/tclIndexObj.c:	Disallow the "ambiguous" error message
        * tests/indexObj.test:		when TCL_EXACT matching is requested.
	* tests/ioCmd.test:

2006-02-15  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclIO.c:	Made several routines tolerant of
	* generic/tclIORChan.c:	interp == NULL arguments.  [Bug 1380662]
	* generic/tclIOUtil.c:

2006-02-09  Don Porter  <dgp@users.sourceforge.net>

	TIP#215 IMPLEMENTATION

	* doc/incr.n:		Revised [incr] to auto-initialize when varName
	* generic/tclExecute.c:	argument is unset.  [Patch 1413115].
	* generic/tclVar.c:
	* tests/compile.test:
	* tests/incr-old.test:
	* tests/incr.test:
	* tests/set.test:

	* tests/main.test (Tcl_Main-6.7):	Improved robustness of
	command auto-completion test. [Bug 1422736].

2006-02-08  Donal K. Fellows  <dkf@users.sf.net>

	* doc/Encoding.3, doc/encoding.n: Updates due to review at request of
	Don Porter. Mostly minor changes.

2006-02-08  Don Porter  <dgp@users.sourceforge.net>

	TIP#258 IMPLEMENTATION

	* doc/Encoding.3:	New subcommand [encoding dirs].
	* doc/encoding.n:	New routine Tcl_GetEncodingNameFromEnvironment.
	* generic/tcl.decls:	Made public:
	* generic/tclBasic.c:	TclGetEncodingFromObj
	* generic/tclCmdAH.c:		-> Tcl_GetEncodingFromObj
	* generic/tclEncoding.c:TclGetEncodingSearchPath 
	* generic/tclInt.decls:		-> Tcl_GetEncodingSearchPath
	* generic/tclInt.h:	TclSetEncodingSearchPath
	* generic/tclTest.c:		-> Tcl_SetEncodingSearchPath
	* library/init.tcl:	Removed commands: