@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: namespace.test,v 1.21.4.16 2006/02/23 14:45:27 dgp Exp $
+# RCS: @(#) $Id: namespace.test,v 1.21.4.17 2006/02/28 16:34:55 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
@@ -2508,7 +2508,10 @@ test namespace-52.9 {unknown: refcounting} -setup {
     namespace unknown $handler
     rename this {}
 } -result {this is a test noSuchCommand}
-test namespace-52.10 {unknown: with TCL_EVAL_GLOBAL} -setup {
+testConstraint testevalobjv [llength [info commands testevalobjv]]
+test namespace-52.10 {unknown: with TCL_EVAL_GLOBAL} -constraints {
+    testevalobjv
+} -setup {
     rename ::unknown unknown.save
     proc ::unknown args {
 	set caller [uplevel 1 {namespace current}]
@@ -2542,18 +2545,19 @@ test namespace-52.11 {unknown: with TCL_EVAL_INVOKE} -setup {
 	}
     }
     catch {rename ::noSuchCommand {}}
-    set slave [interp create]
+    set ::slave [interp create]
 } -body {
-    $slave alias bar noSuchCommand
+    $::slave alias bar noSuchCommand
     namespace eval test_ns_1 {
 	namespace unknown unknown
 	proc unknown args {
 	    return FAIL
 	}
-	$slave eval bar
+	$::slave eval bar
     }
 } -cleanup {
-    interp delete $slave
+    interp delete $::slave
+    unset ::slave
     namespace delete test_ns_1
     rename ::unknown {}
     rename unknown.save ::unknown
